server/public/static/css/custom.css
.bd-placeholder-img {
  font-size: 1.125rem;
  text-anchor: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@media (min-width: 768px) {
  .bd-placeholder-img-lg {
    font-size: 3.5rem;
  }
}

@media (max-width: 768px) {
  .card-columns {
    -webkit-column-count: 2;
    -moz-column-count: 2;
    column-count: 2;
  }
}

@media (max-width: 667px) {
  main h1 {
    margin-top:1.5rem;
  }
  .card {
    display: inherit;
  }
  .card-header h6 .label {
    max-width: 180px;
  }
  .card-columns {
    -webkit-column-count: 1;
    -moz-column-count: 1;
    column-count: 1;
  }
  .card .list-group {
    min-height: initial !important;
  }
}

html {
  position: relative;
  min-height: 100%;
}

body {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 5rem;
  margin-bottom: 100px;
}

body.login {
  padding-top: inherit !important;
  background-color: #f5f5f5;
}

#alert.alert-empty {
  display: none;
}

#wait {
  display: none !important;
  position: fixed;
  height: 32px;
  width: 32px;
  margin: -16px 0 0 -16px;
  top: 50%;
  left: 50%;
  z-index: 9999;
}

a.navbar-brand i.fas {
  color: orange;
  margin-right: 0.25em;
}

.card.job a.action.play {
  display: inline-block;
  width: 20px;
}

.card.job a.action.disabled {
  /* opacity: 25%; */
  /* cursor: default; */
  display: none;
}

.card.crash a.action.float-right {
  margin-top: -2px;
  margin-left: 0.2em;
}

.card a.action:hover {
  text-decoration: none;
}

.card {
  box-shadow:0 3px 1px -2px rgba(0,0,0,.2),0 2px 2px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12);
}

.card .list-group {
  min-height: 250px;
}

.card .list-group-item {
  padding-left: 0;
  padding-right: 0;
}

.card-footer {
  text-align:right;
  padding: .5rem .75rem;
}

.card-footer a.action.float-right {
  float:none;
}

.card-header {
  padding: .75rem .75rem;
}

.card-header .fas {
  transition: .3s transform ease-in-out;
}

.card-header .collapsed .fas {
  transform: rotate(90deg);
}

.card-header .id {
  display: block;
  float: left;
  width: 40px;
  padding: 12px 0;
  margin: -12px 0 0 -12px;
  text-align: center;
}

.card-header .id.on { background:LightGreen; }
.card-header .id.off { background:LightPink; }
.card-header .id.info { background: LightSkyblue; }
.card-header .id.unknown { background: LightGrey; }
.card-header .id.low { background: LightCyan; }
.card-header .id.medium { background: PeachPuff; }
.card-header .id.high { background: LightPink; }

.card-header .bugid {
  overflow: hidden;
  max-width: 159px;
  max-height: 1.25rem;
}

.card-header h6 {
  margin: 0 0 0 35px;
}

.card-header h6 .label {
  float:left;
  display: inline-block;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.card-header h6 small {
  margin-left: 5px;
}

.card-body pre {
  display:inline;
  font-size: 75%;
}

.fa-play {
  color: green;
}

.form-signin {
  width: 100%;
  max-width: 330px;
  padding: 15px;
  margin: auto;
}

.form-signin .checkbox {
  font-weight: 400;
}

.form-signin .form-control {
  position: relative;
  box-sizing: border-box;
  height: auto;
  padding: 10px;
  font-size: 16px;
}

.form-signin .form-control:focus {
  z-index: 2;
}

.form-signin input[type="email"] {
  margin-bottom: -1px;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.form-signin input[type="password"] {
  margin-bottom: 10px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 60px;
  line-height: 59px;
  background-color: #f5f5f5;
}

footer .container {
  clear:both;
}

footer .float-right,
footer .float-left {
  margin:0;
}

footer .version:before {
  content: "Version ";
  font-size: 80%;
}

@media (max-width: 320px) {
  footer .version:before {
    content: "v";
    font-size: 80%;
 }
}

